Source/FindFile/obj/Debug/netstandard1.4/MaskParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\XBO4\Desktop\FindFileByMask\newFindFile\Source\FindFile\Mask.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace FindFile {

	using System;
	using System.Text;
	using System.Text.RegularExpressions;
	using FindFile;
	using System.IO;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class MaskParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, EQUAL_SIGN=13, EQUAL_SIGN_1=14, EQUAL_SIGN_2=15, 
		NAME_SYMBOLS=16, LENGTH_SYMBOLS=17, LENGTH_SYMBOLS_1=18, LENGTH_SYMBOLS_2=19, 
		CONTENT_SYMBOLS=20, NEWLINE=21;
	public const int
		RULE_mask = 0, RULE_statement = 1, RULE_boolexpr = 2, RULE_expr = 3, RULE_exprName = 4, 
		RULE_exprLength = 5, RULE_exprContent = 6;
	public static readonly string[] ruleNames = {
		"mask", "statement", "boolexpr", "expr", "exprName", "exprLength", "exprContent"
	};

	private static readonly string[] _LiteralNames = {
		null, "'&'", "'|'", "'^'", "' '", "'('", "')'", "'Name'", "'='", "'''", 
		"'~'", "'Length'", "'Content'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "EQUAL_SIGN", "EQUAL_SIGN_1", "EQUAL_SIGN_2", "NAME_SYMBOLS", "LENGTH_SYMBOLS", 
		"LENGTH_SYMBOLS_1", "LENGTH_SYMBOLS_2", "CONTENT_SYMBOLS", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Mask.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


		String NAME	= Path.GetFileName(MaskHandler.currentFile.GetName());
	    UInt64 LENGTH = MaskHandler.currentFile.GetLength();
	    String CONTENT = MaskHandler.currentFile.GetContent();
		bool IfFitsToNamemask(String Name, String Mask)
		{
			Regex mask = new Regex(Mask.Replace(".", "[.]").Replace("*", ".*").Replace("?", "."));
			return mask.IsMatch(Name);
		}

	public MaskParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class MaskContext : ParserRuleContext {
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public MaskContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mask; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.EnterMask(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.ExitMask(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMaskVisitor<TResult> typedVisitor = visitor as IMaskVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMask(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MaskContext mask() {
		MaskContext _localctx = new MaskContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_mask);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 14; statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public BoolexprContext _boolexpr;
		public BoolexprContext boolexpr() {
			return GetRuleContext<BoolexprContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMaskVisitor<TResult> typedVisitor = visitor as IMaskVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 16; _localctx._boolexpr = boolexpr();
			 MaskHandler.final = _localctx._boolexpr.value; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoolexprContext : ParserRuleContext {
		public bool value;
		public ExprContext e1;
		public ExprContext e2;
		public ExprContext e3;
		public ExprContext e4;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public BoolexprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolexpr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.EnterBoolexpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.ExitBoolexpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMaskVisitor<TResult> typedVisitor = visitor as IMaskVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolexpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BoolexprContext boolexpr() {
		BoolexprContext _localctx = new BoolexprContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_boolexpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 19; _localctx.e1 = expr();
			 _localctx.value =  _localctx.e1.value; 
			State = 35;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2))) != 0)) {
				{
				State = 33;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case T__0:
					{
					State = 21; Match(T__0);
					State = 22; _localctx.e2 = expr();
					 _localctx.value &= _localctx.e2.value; 
					}
					break;
				case T__1:
					{
					State = 25; Match(T__1);
					State = 26; _localctx.e3 = expr();
					 _localctx.value |= _localctx.e3.value; 
					}
					break;
				case T__2:
					{
					State = 29; Match(T__2);
					State = 30; _localctx.e4 = expr();
					 _localctx.value =  !_localctx.e4.value; 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 37;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public bool value;
		public ExprNameContext eName;
		public ExprLengthContext eLength;
		public ExprContentContext eContent;
		public BoolexprContext _boolexpr;
		public ExprNameContext[] exprName() {
			return GetRuleContexts<ExprNameContext>();
		}
		public ExprNameContext exprName(int i) {
			return GetRuleContext<ExprNameContext>(i);
		}
		public ExprLengthContext[] exprLength() {
			return GetRuleContexts<ExprLengthContext>();
		}
		public ExprLengthContext exprLength(int i) {
			return GetRuleContext<ExprLengthContext>(i);
		}
		public ExprContentContext[] exprContent() {
			return GetRuleContexts<ExprContentContext>();
		}
		public ExprContentContext exprContent(int i) {
			return GetRuleContext<ExprContentContext>(i);
		}
		public BoolexprContext boolexpr() {
			return GetRuleContext<BoolexprContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMaskVisitor<TResult> typedVisitor = visitor as IMaskVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_expr);
		int _la;
		try {
			State = 106;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,19,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 54;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__6))) != 0)) {
					{
					{
					State = 39;
					_errHandler.Sync(this);
					_la = _input.La(1);
					if (_la==T__3) {
						{
						State = 38; Match(T__3);
						}
					}

					State = 42;
					_errHandler.Sync(this);
					_la = _input.La(1);
					if (_la==T__4) {
						{
						State = 41; Match(T__4);
						}
					}

					State = 44; _localctx.eName = exprName();
					_localctx.value =  _localctx.eName.value;
					State = 47;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						State = 46; Match(T__5);
						}
						break;
					}
					State = 50;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						State = 49; Match(T__3);
						}
						break;
					}
					}
					}
					State = 56;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 73;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__10) | (1L << LENGTH_SYMBOLS) | (1L << LENGTH_SYMBOLS_1))) != 0)) {
					{
					{
					State = 58;
					_errHandler.Sync(this);
					_la = _input.La(1);
					if (_la==T__3) {
						{
						State = 57; Match(T__3);
						}
					}

					State = 61;
					_errHandler.Sync(this);
					_la = _input.La(1);
					if (_la==T__4) {
						{
						State = 60; Match(T__4);
						}
					}

					State = 63; _localctx.eLength = exprLength();
					_localctx.value =  _localctx.eLength.value;
					State = 66;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						State = 65; Match(T__5);
						}
						break;
					}
					State = 69;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						State = 68; Match(T__3);
						}
						break;
					}
					}
					}
					State = 75;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 92;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__11))) != 0)) {
					{
					{
					State = 77;
					_errHandler.Sync(this);
					_la = _input.La(1);
					if (_la==T__3) {
						{
						State = 76; Match(T__3);
						}
					}

					State = 80;
					_errHandler.Sync(this);
					_la = _input.La(1);
					if (_la==T__4) {
						{
						State = 79; Match(T__4);
						}
					}

					State = 82; _localctx.eContent = exprContent();
					_localctx.value =  _localctx.eContent.value;
					State = 85;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,14,_ctx) ) {
					case 1:
						{
						State = 84; Match(T__5);
						}
						break;
					}
					State = 88;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,15,_ctx) ) {
					case 1:
						{
						State = 87; Match(T__3);
						}
						break;
					}
					}
					}
					State = 94;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 96;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__3) {
					{
					State = 95; Match(T__3);
					}
				}

				State = 98; Match(T__4);
				State = 99; _localctx._boolexpr = boolexpr();
				State = 100; Match(T__5);
				State = 102;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__3) {
					{
					State = 101; Match(T__3);
					}
				}

				_localctx.value =  _localctx._boolexpr.value;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprNameContext : ParserRuleContext {
		public bool value;
		public IToken _NAME_SYMBOLS;
		public ITerminalNode NAME_SYMBOLS() { return GetToken(MaskParser.NAME_SYMBOLS, 0); }
		public ExprNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exprName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.EnterExprName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.ExitExprName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMaskVisitor<TResult> typedVisitor = visitor as IMaskVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprNameContext exprName() {
		ExprNameContext _localctx = new ExprNameContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_exprName);
		int _la;
		try {
			State = 132;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,24,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 108; Match(T__6);
				State = 110;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__3) {
					{
					State = 109; Match(T__3);
					}
				}

				State = 112; Match(T__7);
				State = 114;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__3) {
					{
					State = 113; Match(T__3);
					}
				}

				State = 116; Match(T__8);
				State = 117; _localctx._NAME_SYMBOLS = Match(NAME_SYMBOLS);
				State = 118; Match(T__8);
				 _localctx.value =  (NAME == (_localctx._NAME_SYMBOLS!=null?_localctx._NAME_SYMBOLS.Text:null)); 
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 120; Match(T__6);
				State = 122;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__3) {
					{
					State = 121; Match(T__3);
					}
				}

				State = 124; Match(T__9);
				State = 126;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__3) {
					{
					State = 125; Match(T__3);
					}
				}

				State = 128; Match(T__8);
				State = 129; _localctx._NAME_SYMBOLS = Match(NAME_SYMBOLS);
				State = 130; Match(T__8);
				 _localctx.value =  IfFitsToNamemask(NAME, (_localctx._NAME_SYMBOLS!=null?_localctx._NAME_SYMBOLS.Text:null)); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprLengthContext : ParserRuleContext {
		public bool value;
		public IToken _LENGTH_SYMBOLS;
		public IToken _EQUAL_SIGN;
		public IToken _LENGTH_SYMBOLS_1;
		public IToken _EQUAL_SIGN_1;
		public IToken _EQUAL_SIGN_2;
		public IToken _LENGTH_SYMBOLS_2;
		public ITerminalNode LENGTH_SYMBOLS() { return GetToken(MaskParser.LENGTH_SYMBOLS, 0); }
		public ITerminalNode EQUAL_SIGN() { return GetToken(MaskParser.EQUAL_SIGN, 0); }
		public ITerminalNode LENGTH_SYMBOLS_1() { return GetToken(MaskParser.LENGTH_SYMBOLS_1, 0); }
		public ITerminalNode EQUAL_SIGN_1() { return GetToken(MaskParser.EQUAL_SIGN_1, 0); }
		public ITerminalNode EQUAL_SIGN_2() { return GetToken(MaskParser.EQUAL_SIGN_2, 0); }
		public ITerminalNode LENGTH_SYMBOLS_2() { return GetToken(MaskParser.LENGTH_SYMBOLS_2, 0); }
		public ExprLengthContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exprLength; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.EnterExprLength(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMaskListener typedListener = listener as IMaskListener;
			if (typedListener != null) typedListener.ExitExprLength(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMaskVisitor<TResult> typedVisitor = visitor as IMaskVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprLength(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprLengthContext exprLength() {
		ExprLengthContext _localctx = new ExprLengthContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_exprLength);
		int _la;
		try {
			State = 172;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case LENGTH_SYMBOLS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 134; _localctx._LENGTH_SYMBOLS = Match(LENGTH_SYMBOLS);
				State = 136;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__3) {
					{
					State = 135; Match(T__3);
					}
				}
